# transdoc

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GLOSSARY-TM-FEEDBACK-SPEC.md  LICENSE  Makefile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  eval.yml  quality.yml
backend/: README.md  pyproject.toml  requirements-docker.txt  server.py
backend/corpus/: README.md  baseline_real.json
backend/corpus/real/digital_text/: arxiv_attention_en.order.json  arxiv_bert_en.order.json
backend/scripts/: analyze_validate.py  bench_engines.py  bench_quality.py  bench_vs_engines.py  compare_features.py  eval_consistency.py  eval_expansion.py  eval_judge.py  eval_layout.py  eval_ocr.py  eval_preserve.py  eval_qa.py  eval_reading_order.py  eval_table.py  eval_translate.py  eval_typing.py  fetch_commons_images.py  make_samples.py  qa_fidelity.py  qe_examples.py  quality_dashboard.py  quality_gate.py  regen_validate.py  verify_output.py
backend/src/transdoc/: __init__.py  cli.py  config.py  diagnose.py  headers.py  ir.py  limits.py  pipeline.py  repair.py  report.py  textdir.py  verify.py
backend/src/transdoc/api/: __init__.py  analysis.py  app.py  feedback_routes.py  jobs.py  review.py
backend/src/transdoc/eval/: README.md  RESULTS.md  __init__.py  baseline.json  bench.py  dashboard.py  fixtures.py  harness.py  history.jsonl  metrics.py  quality_baseline.json  quality_gate.py  quality_set.json
backend/src/transdoc/eval/samples/: digital_table.docx
backend/src/transdoc/extract/: __init__.py  annots.py  base.py  block_types.py  crosspage.py  docx.py  docx_notes.py  epub.py  furniture.py  fuse.py  html.py  image.py  links.py  odt.py  pdf.py  pptx.py  reading_order.py  spacing.py  structured.py  subtitle.py  surya_order.py  text.py  textnorm.py  vectors.py  xlsx.py
backend/src/transdoc/ingest/: detect.py
backend/src/transdoc/layout/: __init__.py  paddle_layout.py  structure.py  structure_detect.py  subprocess_detect.py
backend/src/transdoc/ocr/: __init__.py  auto.py  base.py  easyocr_engine.py  paddle.py  paddle_detect.py  preprocess.py  router.py  surya.py  tesseract.py
backend/src/transdoc/regenerate/: __init__.py  docx_inplace.py  docx_out.py  epub_out.py  markdown.py  odt_inplace.py  pdf_out.py  pptx_out.py  subtitle_out.py  xlsx_out.py
backend/src/transdoc/store/: __init__.py  db.py  embed.py  feedback.py  glossary.py  interchange.py  tm.py
backend/src/transdoc/translate/: __init__.py  align.py  anthropic.py  argos.py  base.py  consistency.py  echo.py  escalate.py  fallback.py  google.py  indictrans.py  libretranslate.py  localize.py  madlad.py  memory.py  mymemory.py  nllb.py  ollama.py  openrouter.py  opusmt.py  protect.py  qa.py  quality.py  residual.py  select.py  suggest.py
backend/tests/: conftest.py  test_align.py  test_alignment.py  test_allcaps.py  test_annotations.py  test_api.py  test_api_alternatives.py  test_api_batch.py  test_api_feedback.py  test_auto_glossary_acronym.py  test_autosource_script.py  test_bidi_flag.py  test_bilingual.py  test_block_types.py  test_box_expand.py  test_caption_assoc.py  test_cell_shading.py  test_cell_style.py  test_chrf.py  test_col_widths.py  test_column_order.py  test_config.py  test_consistency.py  test_corrupt_input.py  test_crosspage.py  test_detect_lang.py  test_detect_robust.py  test_doc_language.py  test_docx_inplace.py  test_docx_inplace_runs.py  test_docx_notes.py  test_docx_out_style.py  test_easyocr.py  test_engine_select.py  test_epub_roundtrip.py  test_escalate.py  test_eval_bench.py  test_eval_consistency.py  test_eval_dashboard.py  test_eval_harness.py  (+122 more)
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  EXAMPLES.md  FIDELITY.md  MANUAL_QA.md  QUALITY.md  RESEARCH.md  RISKS.md  TRANSLATION.md  USAGE.md
docs/examples/: mixed-docx.en.docx  mixed-docx.src.docx
documents/: README.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AnalysisView.tsx  BatchView.test.tsx  BatchView.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  Footer.tsx  GlossaryView.tsx  Hero.test.tsx  Hero.tsx  PreviewPanel.tsx  ReviewView.test.tsx  ReviewView.tsx  TranslateForm.test.tsx  TranslateForm.tsx
frontend/src/lib/: api.ts  i18n.test.ts  i18n.ts  theme.ts  utils.ts
frontend/src/test/: setup.ts
samples/: README.md
scripts/: bench_quality.py  fetch_commons_images.py  fetch_corpus.sh  make_samples.py  qa_fidelity.py
src/transdoc/: cli.py  config.py  diagnose.py  headers.py  ir.py  limits.py  pipeline.py  report.py
src/transdoc/api/: analysis.py  app.py  jobs.py
src/transdoc/extract/: __init__.py  base.py  docx.py  epub.py  image.py  odt.py  pdf.py  subtitle.py  xlsx.py
src/transdoc/ingest/: detect.py
src/transdoc/layout/: __init__.py  paddle_layout.py  subprocess_detect.py
src/transdoc/ocr/: __init__.py  auto.py  base.py  paddle.py  surya.py
tests/: test_alignment.py  test_api.py  test_bilingual.py  test_box_expand.py  test_config.py  test_dense_flow_fallback.py  test_detect_lang.py  test_docx_inplace.py  test_epub_roundtrip.py  test_fallback.py  test_flow_reconstruction.py  test_font_family.py  test_form_flow.py  test_formula_crop.py  test_glossary_enforce.py  test_google_codes.py  test_headers.py  test_heading_detect.py  test_image_overlay.py  test_integration_e2e.py  test_layout_regions.py  test_limits.py  test_memory.py  test_odt_inplace.py  test_odt_lists.py  test_overlay_fidelity.py  test_paddle_ocr.py  test_pages_subset.py  test_pdf_flow.py  test_pdf_garbage.py  test_pdf_tables.py  test_protect.py  test_reconstruct.py  test_subtitle.py  test_tabular.py  test_translate_document.py  test_vertical_order.py  test_vertical_skip.py  test_xlsx_grid.py
web/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css
(+31 files in other folders)
