[project]
name = "transdoc"
version = "0.1.0"
description = "Document Intelligence & Translation Agent — OCR repair, translate, regenerate any document to any language."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Proprietary — all rights reserved (see LICENSE)" }
authors = [{ name = "Muhammad Mishbakhuz Zuhail", email = "muhammadmishbakhuzzuhail@gmail.com" }]
keywords = ["translation", "ocr", "document", "nllb", "deepl", "docx", "pdf"]

# Core deps: lightweight path that works on CPU, no heavy ML.
dependencies = [
  "pydantic>=2.6",
  "typer>=0.12",
  "rich>=13.7",
  "python-magic>=0.4.27",
  "charset-normalizer>=3.3",
  "PyMuPDF>=1.24",        # PDF text + bbox + render
  "python-docx>=1.1",     # DOCX read/write
  "odfpy>=1.4",           # ODT read
  "Pillow>=10.2",         # image handling
  "pytesseract>=0.3.10",  # OCR (system tesseract)
  "Jinja2>=3.1",          # report templating
  "langdetect>=1.0.9",    # language detection fallback
  "deep-translator>=1.11", # free MT chain: Google web endpoint / MyMemory / LibreTranslate
  "python-bidi>=0.4",     # RTL: Unicode bidi reorder for raw-draw paths (core fidelity)
  "arabic-reshaper>=3.0", # RTL: Arabic letter joining -> presentation forms (core fidelity)
]

[project.optional-dependencies]
# LLM translation. pip install -e ".[llm]"  (OpenRouter uses the openai SDK)
llm = ["openai>=1.35", "anthropic>=0.40", "httpx>=0.25"]
# Offline neural MT (MADLAD/Opus-MT/NLLB). pip install -e ".[nmt]"  (pulls torch — heavy)
nmt = ["transformers>=4.44", "torch>=2.2", "sentencepiece>=0.2", "sacremoses>=0.1",
       "accelerate>=0.30"]
# 8-bit quantization to fit MADLAD-400-3B on a 6GB GPU
quant = ["bitsandbytes>=0.43", "accelerate>=0.30"]
# Commercial-safe light offline engine
argos = ["argostranslate>=1.9"]
# Modern OCR + layout reading order (cfg.reading_order_engine="surya"), strong non-Latin.
# NOTE: surya-ocr >=0.20 is a foundation VLM that spawns an external inference server (vLLM+Docker
# or a llama-server binary) — not in-process CPU — so reading-order via Surya needs a Docker/GPU
# host. On the CPU-only box the XY-cut default already scores tau 1.0, so this stays optional.
surya = ["surya-ocr>=0.6"]
# EasyOCR: strong multilingual OCR (80+ langs, box+conf), torch-based (no paddlepaddle clash).
# The router's escalation engine for non-Latin scans. pip install -e ".[easyocr]"
easyocr = ["easyocr>=1.7"]
# PaddleOCR PP-OCRv5/v6 — lightweight det+rec, far stronger than Tesseract on degraded /
# non-Latin scans, runs CPU-only. pip install -e ".[paddleocr]"  then  --ocr paddle
# (commercial-safe Apache-2.0). Use a GPU build of paddlepaddle for speed if available.
paddleocr = ["paddlepaddle>=3.0", "paddleocr>=3.0"]
# PDF regeneration with full layout/CJK font support (RTL libs are in base deps).
pdf = ["weasyprint>=62"]
# Web API the React frontend talks to (thread-backed job store — no broker needed).
api = ["fastapi>=0.111", "uvicorn>=0.30", "python-multipart>=0.0.9"]
# Optional: move the job store onto a Celery/Redis broker to scale past one node.
scale = ["celery>=5.4", "redis>=5.0"]
# Reference-free translation quality estimation (COMET-Kiwi)
qe = ["unbabel-comet>=2.2"]
# Word-alignment style transfer: redistribute inline run styles onto the block translation
# (awesome-align algorithm on mBERT). pip install -e ".[align]"  (pulls torch)
align = ["transformers>=4.44", "torch>=2.2"]
# Extra round-trip formats: subtitles, EPUB, PowerPoint, Excel
formats = ["python-pptx>=1.0", "openpyxl>=3.1", "ebooklib>=0.18", "srt>=3.5", "beautifulsoup4>=4.12"]
# More accurate, deterministic language detection (lingua low-accuracy mode). Heavier RAM
# (~1.2GB all-language models); without it the langdetect core path is used. pip install -e ".[detect]"
detect = ["lingua-language-detector>=2.0"]
# IndicTrans2 offline NMT for 22 Indic languages (MIT, commercial-safe). Needs the toolkit for
# the script normalization the models expect. pip install -e ".[indic]"  (pulls torch via nmt)
indic = ["transformers>=4.44", "torch>=2.2", "sentencepiece>=0.2",
         "IndicTransToolkit>=1.0"]
dev = ["pytest>=8.0", "ruff>=0.5", "httpx>=0.25"]   # httpx: FastAPI TestClient

[project.scripts]
transdoc = "transdoc.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transdoc"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]   # put backend/ on sys.path so tests can `from scripts import ...`
